# GameEngineUqacWinter2024

./: .gitignore  desktop.ini
Exercice1/: CMakeCache.txt  CMakeLists.txt  README.md
Exercice1/examples/chickendodge/data/: equipe.yaml
Exercice1/examples/chickendodge/data/shaders/: deformation.frag
Exercice1/examples/chickendodge/include/chickendodge/components/: player.h
Exercice1/examples/chickendodge/src/: game.cpp
Exercice1/examples/chickendodge/src/components/: player.cpp  referee.cpp
Exercice1/include/simplege/: game.h  simplege.h
Exercice1/include/simplege/components/: layer.h  sprite.h
Exercice1/include/simplege/systems/: displaysystem.h  physicsystem.h
Exercice1/src/: game.cpp
Exercice1/src/components/: debugdrawcalls.cpp  layer.cpp  sprite.cpp
Exercice3/examples/chickendodge/data/: equipe.yaml
Exercice3/include/simplege/systems/: physicsystem.h  quadtree.h
Exercice3/src/components/: collider.cpp
Exercice3/src/systems/: quadtree.cpp
Exercice4/examples/chickendodge/data/: equipe.yaml
Exercice4/src/: localisation.cpp
Exercice5/: CMakeLists.txt  README.md
Exercice5/examples/chickendodge/: CMakeLists.txt
Exercice5/examples/chickendodge/data/scenes/: play-multi.json  play.json
Exercice5/examples/chickendodge/include/chickendodge/: components.h  messages.h
Exercice5/examples/chickendodge/include/chickendodge/components/: networkleaderboard.h  player.h  referee.h
Exercice5/examples/chickendodge/include/chickendodge/messages/: networksendsinglescore.h
Exercice5/examples/chickendodge/server/: networkplayerserver.cpp  networkplayerserver.h
Exercice5/examples/chickendodge/src/: game.cpp
Exercice5/examples/chickendodge/src/components/: networkleaderboard.cpp  networkplayermanager.cpp  player.cpp  referee.cpp
Exercice5/include/simplege/: game.h  simplege.h
Exercice5/include/simplege/components/: debugdrawcalls.h
Exercice5/include/simplege/systems/: networksystem.h
Exercice5/lib/gfxapi/include/gfxapi/: window.h
Exercice5/src/: game.cpp  localisation.cpp
Exercice5/src/systems/: displaysystem.cpp
Exercice6/: CMakeLists.txt  README.md
Exercice6/examples/chickendodge/: CMakeLists.txt
Exercice6/examples/chickendodge/data/: equipe.yaml
Exercice6/examples/chickendodge/include/chickendodge/components/: chickenspawner.h
Exercice6/examples/chickendodge/src/components/: chicken.cpp  chickenspawner.cpp  player.cpp  referee.cpp
SetupCheck/: .gitignore  CMakeCache.txt  CMakeLists.txt  remise.ps1  remise.sh
SetupCheck/data/: equipe.yaml  test.vert
SetupCheck/include/setupcheck/pch/: precomp.h
SetupCheck/src/: main.cpp  validatevulkan.cpp
